adding google analytics

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="manifest.json">
-    <!-- <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5"> -->
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/jquery.fancybox.css">
@@ -32,6 +31,14 @@
     <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HWPPVDJCG8"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-HWPPVDJCG8');
+    </script>
 </head>
 <body id="top">
 <section class="hero">
@@ -309,7 +316,7 @@
                 The area we have chosen is called Adeje as it's a great base for lots of onward spots (beaches, hikes etc), has decent food and is on the fringes of the super touristy area of Los Americanos. It also has the greatest range of accommodation to suit all budgets so we hope there is something for everyone!
             </p>
             <p>
-                If you stay at one of the GF hotels, you can also get a 10% discount, with this code [TBC]: We will be staying at GF Isabel :)
+                If you stay at one of the GF hotels, you can also get a 10% discount, with this code [crystalanddavidwedding]: We will be staying at GF Isabel :)
             </p>
             <ul>
                 <li>- <a href="https://gfhoteles.com/en/gf-fanabe/">GF Fanabe</a> – 4 star hotel</li>
