--- a/index.html
+++ b/index.html
@@ -252,9 +252,17 @@
 
 <section id="video-bg" class="hidden-sm hidden-xs">
         <div id="bgndVideo" class="player"
-            data-property="{videoURL:'https://youtu.be/NX7H6M1V9o4',containment:'#video-bg', 
-                mute:true, playOnlyIfVisible:true, showControls:false, startAt:00, stopAt:47, 
-                addFilters: {grayscale: 80,sepia: 80,opacity: 30}, showYTLogo:false }">
+            data-property="{
+                videoURL: 'https://youtu.be/NX7H6M1V9o4',
+                containment: '#video-bg', 
+                mute: true, 
+                playOnlyIfVisible: true, 
+                stopMovieOnBlur: true, 
+                showControls: false, 
+                startAt:00, stopAt:47, 
+                addFilters: {grayscale: 80,sepia: 80,opacity: 30}, 
+                showYTLogo: false 
+            }">
         </div>
         <div id="video-content">
             <h5>Beware of the Tenerife Monster!</h5>
@@ -284,7 +292,7 @@
                 Granje de Bastian – it's in a pretty remote location, so we shall be arranging transport on the wedding day to and also from the venue. We also have limited spots to stay on-venue, if you'd be interested then please let us know in the survey and we shall try our best to accommodate. This means if you need to say, store a spare of flats or jacket or anything else that can be possible! It has three pools, a tennis court, a foosball table, kitchens across three buildings and lots of parking!
             </p>
             <p>
-                The venue is about a 15 minute drive from South Tenerife Airport (TSF) and 30-minute drive from Adeje.
+                The venue is about a 15 minute drive from <b>South Tenerife Airport (TSF)</b> and 30-minute drive from Adeje.
             </p>
             <h6><b>Wedding transport</b></h6>
             <p>
@@ -313,18 +321,18 @@
                 With people staying until various dates we have chosen a set of hotels all within a few minutes walk of each other so that we can hang out together after the wedding. Or perhaps you'll do something so embarrassing at the wedding that you'll never want to face the wedding party again – your destiny is in your own hands.
             </p>
             <p>
-                The area we have chosen is called Adeje as it's a great base for lots of onward spots (beaches, hikes etc), has decent food and is on the fringes of the super touristy area of Los Americanos. It also has the greatest range of accommodation to suit all budgets so we hope there is something for everyone!
+                The area we have chosen is called <b>Costa Adeje</b> as it's a great base for lots of onward spots (beaches, hikes etc), has decent food and is on the fringes of the super touristy area of Los Americanos. It also has the greatest range of accommodation to suit all budgets so we hope there is something for everyone!
             </p>
             <p>
-                If you stay at one of the GF hotels, you can also get a 10% discount, with this code [crystalanddavidwedding]: We will be staying at GF Isabel :)
+                If you stay at one of the GF hotels, you can also get a 10% discount, with this code: <code>crystalanddavidwedding</code>. We will be staying at Flamingo Suites, which is approximatley a 15-20 minute walk to the GF hotels area. Here are the hotels we recommend:
+                <ul>
+                    <li>- <a href="https://goo.gl/maps/RdGg3yF7JgtMGJzm6">Flamingo Suites</a> – 4 star serviced apartments (we shall be staying here!)</li>
+                    <li>- <a href="https://gfhoteles.com/en/gf-fanabe/">GF Fanabe</a> – 4 star hotel</li>
+                    <li>- <a href="https://gfhoteles.com/en/gf-isabel/">GF Isabel</a> – 4 star hotel</li>
+                    <li>- <a href="https://gfhoteles.com/en/gf-gran-costa-adeje-tenerife-sur/">GF Gran Costa Adeje</a> – 5 star hotel</li>
+                    <li>- <a href="https://gfvictoria.com/">GF Victoria</a> – 5 star hotel</li>
+                </ul>
             </p>
-            <ul>
-                <li>- <a href="https://gfhoteles.com/en/gf-fanabe/">GF Fanabe</a> – 4 star hotel</li>
-                <li>- <a href="https://gfhoteles.com/en/gf-isabel/">GF Isabel</a> – 4 star hotel (we shall be staying here!)</li>
-                <li>- <a href="https://gfhoteles.com/en/gf-gran-costa-adeje-tenerife-sur/">GF Gran Costa Adeje</a> – 5 star hotel</li>
-                <li>- <a href="https://gfvictoria.com/">GF Victoria</a> – 5 star hotel</li>
-                <li>- <a href="https://www.haciendasvillagetenerife.com/en/">Las Haciendas</a> – serviced apartments (we have stayed here and it's great but it's a little out of town – approx. 15-20 minute walk into central)</li>
-            </ul>
             <p>
                 We have generally stayed at lovely AirBnB's in Tenerife – many have their own communal pool, however our intention to hire a super AirBnB has proved too difficult as many are a drive away from central and we would much rather be down central with you all!
             </p>
