--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <meta property="og:description" content="We would like to invite you to our big day.">
     <meta property="og:type" content="website">
     <meta property="og:image" itemprop="image" content="https://crystal-and-david.com/img/logo-thumbnail.png">
+    <meta property="og:url" content="https://crystal-and-david.com/"/>
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png"> 
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
