adding tenerife-map

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span>&times;</span>
                     </button>
                     <h3 class="text-center section-padding">Dress code</h3>
-                    <h5>General</h5>
+                    <h4>General</h4>
                     <p>
                         <strong>BBQ</strong>
                         <br>
@@ -222,7 +222,7 @@
                         sit amet. Ut eget mauris ex. Aliquam sit amet tempor ante, rhoncus 
                         tincidunt nisl. Nullam bibendum scelerisque massa. 
                     </p>
-                    <h5>DEF</h5>
+                    <h4>DEF</h4>
                     <p>
                         <strong>Pool</strong>
                         <br>
@@ -230,7 +230,7 @@
                         sit amet. Ut eget mauris ex. Aliquam sit amet tempor ante, rhoncus 
                         tincidunt nisl. Nullam bibendum scelerisque massa. 
                     </p>
-                    <h5>XYZ</h5>
+                    <h4>XYZ</h4>
                     <p>
                         <strong>Garden of Sparkle</strong>
                         <br>
@@ -272,36 +272,36 @@
     <div class="container">
         <div class="wp3">
             <h3 class="header">The Finer Details</h3>
-            <h6><b>The Canarian Island of Tenerife</b></h6>
+            <h5><b>The Canarian Island of Tenerife</b></h5>
             <p>
                 For those that haven't been before, we chose the volcanic island for its almost guaranteed sunny weather and its reach for those travelling from the UK, France, and US (comparative to our original Bali wedding plan!).
             </p>
             <p>
                 Many will know it as a party island, but we fell in love with it for its less travelled parts (…such as Crossfit…), serene rocky mountain landscapes, good food and incredibly warm people. So, it might not look like much on arrival – a bit like Mars with hamlets of Brit ex-pat modern-builds, but we hope you'll spend a few extra days after the wedding exploring it with us :)
             </p>
-            <h6><b>The Weather</b></h6>
+            <h5><b>The Weather</b></h5>
             <p>
                 In October, the weather should hover around 22 degrees in the daytime and 18 degrees at its coolest in the evenings – US folks, that's 70F and 64F.  That might not sound super hot, but it's usually cloudless so it feels like a pretty perfect temperature during the day!
             </p>
             <p>
                 Our venue is in the mountains so it can be a little cool and windy in the evening so definitely bring a jacket if you're not going to be grooving on the dancefloor all night!
             </p>
-            <h6><b>The Venue</b></h6>
+            <h5><b>The Venue</b></h5>
             <p>
                 Granje de Bastian – it's in a pretty remote location, so we shall be arranging transport on the wedding day to and also from the venue. We also have limited spots to stay on-venue, if you'd be interested then please let us know in the survey and we shall try our best to accommodate. This means if you need to say, store a spare of flats or jacket or anything else that can be possible! It has three pools, a tennis court, a foosball table, kitchens across three buildings and lots of parking!
             </p>
             <p>
                 The venue is about a 15 minute drive from <b>South Tenerife Airport (TSF)</b> and 30-minute drive from Adeje.
             </p>
-            <h6><b>Wedding transport</b></h6>
+            <h5><b>Wedding transport</b></h5>
             <p>
                 Will be arranged to and from a central location(s) to the venue. In the evening, we'll arrange a couple of departure times for guests. If you rent a car, there is plenty of parking onsite (we are literally in a mountainous desert), or you can also take a taxi back.
             </p>
-            <h6><b>Our wedding planners</b></h6>
+            <h5><b>Our wedding planners</b></h5>
             <p>
                 Helen from Licandro weddings will be at the venue on the day – orchestrating all the operations with her husband, Juan as photographer. They have been amazing bringing this together from afar and are beautiful people inside and out so feel free to say ‘hello' to them on the big day!
             </p>
-            <h6><b>COVID Polciy</b></h6>
+            <h5><b>COVID Polciy</b></h5>
             <p>
                 All guests are expected to be fully vaccinated. 
             </p>
@@ -319,23 +319,30 @@
             <p>
                 Tenerife has some great beach bars, spas, hikes, climbs, go-karting, foodie jaunts, wine-tasting and…cactus ice-cream!
             </p>
-            <h5>Where to stay:</h5>
+            <h4>Where to stay:</h4>
+            <h5>Friday 14th - Saturday 15th October (Wedding days)</h5>
+
+            <img class="img-responsive" src="img/tenerife-map.png">
+
+            <h6>Option 1: Stay Onsite</h6>
             <p>
                 We have limited accommodation on-site at the wedding venue (Granje de Bastian) for two nights: Friday 14th and Saturday 15th October. If you are interested in staying on-site, please mark your interest in the <a href="#rsvp">form</a> below. If you do get a spot on-site and are interested in staying in Tenerfie the following week, please book your accomodation from Sunday 16th October onwards!
             </p>
+            <h6>Option 2: Stay in Costa Adeje</h6>
             <p>
-                If you do not get a spot on-site, we will also arrange for a shuttle bus to pick up / drop off guests from a central hotel in Costa Adeje. After the weekend festivities, we will also stay in Costa Adeje.
+                If you do not get a spot on-site, please book accomodation yourself and we will arrange for a shuttle bus to pick up / drop off guests from a central location in Costa Adeje (about a 30 minute drive). Alternatively you can get a taxi or drive to the venue yourself.
             </p>
+            <h5>Sunday 16th - Sunday 23rd October (Extended holiday)</h5>
             <p>
-                With people staying until various dates we have chosen a set of hotels all within a few minutes walk of each other so that we can hang out together after the wedding. Or perhaps you'll do something so embarrassing at the wedding that you'll never want to face the wedding party again – your destiny is in your own hands.
+                With people staying until various dates we have chosen a set of hotels all within a few minutes walk of each other so that we can hang out together after the wedding. Or perhaps you'll do something so embarrassing at the wedding that you'll never want to face the wedding party again – your destiny is in your own hands!
             </p>
             <p>
                 The area we have chosen is called <b>Costa Adeje</b> as it's a great base for lots of onward spots (beaches, hikes etc), has decent food and is on the fringes of the super touristy area of Los Americanos. It also has the greatest range of accommodation to suit all budgets so we hope there is something for everyone!
             </p>
             <p>
-                If you stay at one of the GF hotels, you can also get a 10% discount, with this code: <code>crystalanddavidwedding</code>. We will be staying at Flamingo Suites, which is approximatley a 15-20 minute walk to the GF hotels area. Here are the hotels we recommend:
+                We will be staying at Flamingo Suites in Costa Adeje. We have managed to clinch a deal where you can get 10% discount across the chain GF hotels using this code: <code>crystalanddavidwedding</code>. The GF hotels are approximately 15-20 minute walk to Flamingo Suites. Here are the hotels we recommend:
                 <ul>
-                    <li>- <a href="https://goo.gl/maps/RdGg3yF7JgtMGJzm6">Flamingo Suites</a> – 4 star serviced apartments (we shall be staying here!)</li>
+                    <li>- <a href="https://goo.gl/maps/RdGg3yF7JgtMGJzm6">Flamingo Suites</a> – 4 star serviced apartments (we shall be staying here 16 - 23rd October!)</li>
                     <li>- <a href="https://gfhoteles.com/en/gf-fanabe/">GF Fanabe</a> – 4 star hotel</li>
                     <li>- <a href="https://gfhoteles.com/en/gf-isabel/">GF Isabel</a> – 4 star hotel</li>
                     <li>- <a href="https://gfhoteles.com/en/gf-gran-costa-adeje-tenerife-sur/">GF Gran Costa Adeje</a> – 5 star hotel</li>
@@ -345,13 +352,13 @@
             <p>
                 We have generally stayed at lovely AirBnB's in Tenerife – many have their own communal pool, however our intention to hire a super AirBnB has proved too difficult as many are a drive away from central and we would much rather be down central with you all!
             </p>
-            <h5>How to get around:</h5>
+            <h4>How to get around:</h4>
             <p>
                 We think the very best and easiest way to get around is to hire your own car. There are plenty of rental car companies at the airport, but they do get snapped up quickly so do book yours! We shall try to carpool where possible, but of course it can't be guaranteed!
             </p>
         </div>
         <div class="wp5">
-            <h5>What activities are planned?</h5>
+            <h4>What activities are planned?</h4>
             <p>
                 Please share the type activities you'd like to do together in the survey! No one should feel obliged to hang out together, but if people would like to then we'll try and group everyone up! Also, these are all suggestions and we're open to ideas and thoughts!
             </p>
@@ -412,11 +419,11 @@
                 <div id="map-content" class="pointer-events-auto">
                     <div class="row">
                         <div class="col-md-6">
-                            <h5>Casa Rural La Granja de Bastian</h5>
+                            <h4>Casa Rural La Granja de Bastian</h4>
                             <p>C. de Bastián, 5, 38593 El Rio, Santa Cruz de Tenerife, Spain</p>
                         </div>
                         <div class="col-md-6">
-                            <h5>If you get lost... </h5>
+                            <h4>If you get lost... </h4>
                             <p><i class="fa fa-mobile"></i> <a href="tel://+447860664768">+44 78 6066 4768</a> (Crystal)<br>
                                 <i class="fa fa-mobile"></i> <a href="tel://+447908211060">+44 79 0821 1060</a> (David)</p>
                         </div>
