updating wording for where to stay

--- a/index.html
+++ b/index.html
@@ -334,10 +334,7 @@
             </p>
             <h5>Sunday 16th - Sunday 23rd October (Extended holiday)</h5>
             <p>
-                With people staying until various dates we have chosen a set of hotels all within a few minutes walk of each other so that we can hang out together after the wedding. Or perhaps you'll do something so embarrassing at the wedding that you'll never want to face the wedding party again – your destiny is in your own hands!
-            </p>
-            <p>
-                The area we have chosen is called <b>Costa Adeje</b> as it's a great base for lots of onward spots (beaches, hikes etc), has decent food and is on the fringes of the super touristy area of Los Americanos. It also has the greatest range of accommodation to suit all budgets so we hope there is something for everyone!
+                We would love to extend our time with you all after the wedding! With people staying until various dates we have chosen an area called <b>Costa Adeje</b>. It's a great base for lots of onward spots (beaches, hikes etc), has decent food and cocktail spots/drinking holes and is on the fringes of the super touristy area of Los Americanos (which we will probably avoid!). It also has the greatest range of accommodation to suit all budgets so we hope there is something for everyone!
             </p>
             <p>
                 We will be staying at Flamingo Suites in Costa Adeje. We have managed to clinch a deal where you can get 10% discount across the chain GF hotels using this code: <code>crystalanddavidwedding</code>. The GF hotels are approximately 15-20 minute walk to Flamingo Suites. Here are the hotels we recommend:
