--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                             <li><a href="#video-bg">Tenerife Monster</a></li>
                             <li><a href="#details">Details</a></li>
                             <li><a href="#faqs">FAQs</a></li>
+                            <li><a href="#gift">Gift</a></li>
                         </ul>
                         <ul class="member-actions">
                             <li><a href="#map" class="login">Venue</a></li>
@@ -291,7 +292,7 @@
                 Granje de Bastian – it's in a pretty remote location, so we shall be arranging transport on the wedding day to and also from the venue. We also have limited spots to stay on-venue, if you'd be interested then please let us know in the survey and we shall try our best to accommodate. This means if you need to say, store a spare of flats or jacket or anything else that can be possible! It has three pools, a tennis court, a foosball table, kitchens across three buildings and lots of parking!
             </p>
             <p>
-                The venue is about a 15 minute drive from <b>South Tenerife Airport (TSF)</b> and 30-minute drive from Adeje.
+                The venue is about a 15 minute drive from <b>South Tenerife Airport (TFS)</b> and 30-minute drive from Adeje.
             </p>
             <h5><b>Wedding transport</b></h5>
             <p>
@@ -395,6 +396,23 @@
             <p>
                 <b>Crossfit</b> – (£28/$33) Unlimited WOD/ drop-ins for the week. We've been to this <a href="https://www.crossfit27.com/">one</a> and it's great! You knew we would put a workout thing in!
             </p>
+        </div>
+    </div>
+</section>
+
+<section id="gift" class="section-padding">
+    <div class="container">
+        <div class="wp3">
+            <h3 class="header">Gift</h3>
+            <p>
+                Your presence is truly our present and we are so glad to have you in our lives! Should you really wish to gift something, then we plan to take 3 months off in the first quarter of 2023 to pursue our travel dreams before we start our next chapter! We are planning to adventure across Australia, New Zealand, Indonesia, Malaysia, Singapore, Hong Kong (to see the family!) and Japan (also to see long-awaited family!). Thank you so much! x
+            <div class="text-center">
+                <ul>
+                    <li>David Szajngarten and Crystal Chiu</li>
+                    <li>Sort Code: <b>04-00-04</b></li>
+                    <li>Account Number: <b>53917489</b></li>
+                </ul>
+            </div>
         </div>
     </div>
 </section>
