updating time table

--- a/index.html
+++ b/index.html
@@ -172,18 +172,20 @@
                     <p><strong>Saturday 15th October 2022</strong></p>
                     <h5>The Wedding <span class="time">Early afternoon</span></h5>
                     <h6>Destination: <a href="https://goo.gl/maps/rJMgXFnpAf66SR4g7">Granje de Bastian</a></h6>
-                    <p>
-                        Specific timing to be confirmed nearer the date:
-                    </p>
+
                 </div>
                 <div class="wp7">
                     <ul>
-                        <li>- Early afternoon: Tea Ceremony (Optional attendance)</li>
-                        <li>- Afternoon: Wedding Ceremony</li>
-                        <li>- Early evening Family and friends photographs</li>
-                        <li>- 6.30pm: Wedding Dinner</li>
-                        <li>- 9pm: Party time!!</li>
-                        <li>- Last carriage: depends on your  survey results!</li>
+                        <li>- 1.00pm: Chinese Tea ceremony (Optional) </li>
+                        <li>- 1.30pm: Teatime paps</li>
+                        <li>- 3.30pm: Say "I do" </li>
+                        <li>- 4.00pm: Big day snaps</li>
+                        <li>- 4.30pm: Canapes </li>
+                        <li>- 18:00pm: Speeches and (w)raps </li>
+                        <li>- 19.00pm: Dinner</li>
+                        <li>- 21:00pm: Sparkles</li>
+                        <li>- 21:15pm: Boogie time!</li>
+                        <li>- 00:00 - 01:30am: Cave rave!!</li>
                     </ul>
                 </div>
             </div>
@@ -191,10 +193,10 @@
             <div class="col-md-4 col-sm-12 col-xs-12 rightcol">
                 <div class="wp8">
                     <p><strong>Sunday 16th October 2022</strong></p>
-                    <h5>Sunday meal <span class="time">7:00pm</span></h5>
+                    <h5>Sunday meal <span class="time">2:30pm</span></h5>
                     <h6>Destination: <a href="https://www.restauranteelcordero.com/Inicio/">Guanchinche  El Cordero</a></h6>
                     <p>
-                        For anyone staying the wedding weekend, we will book a dinner at this banana plantation! A Guanchinche is like a local grill or bbq serving local food and wine, in a pretty special environment! This is optional to the wedding if you'd like to have some food together after the wedding to cure that inevitable hangover!
+                        For anyone staying the wedding weekend, we will book a <b>late lunch</b> at this banana plantation! A Guanchinche is like a local grill or bbq serving local food and wine, in a pretty special environment! This is optional to the wedding if you'd like to have some food together after the wedding to cure that inevitable hangover!
                     </p>
                 </div>
             </div>
@@ -289,14 +291,18 @@
             </p>
             <h5><b>The Venue</b></h5>
             <p>
-                Granje de Bastian – it's in a pretty remote location, so we shall be arranging transport on the wedding day to and also from the venue. We also have limited spots to stay on-venue, if you'd be interested then please let us know in the survey and we shall try our best to accommodate. This means if you need to say, store a spare of flats or jacket or anything else that can be possible! It has three pools, a tennis court, a foosball table, kitchens across three buildings and lots of parking!
+                Granje de Bastian – it's in a pretty remote location up in the mountains. We have limited spots to stay on-venue, if you'd be interested then please let us know in the survey and we shall try our best to accommodate. This means if you need to say, store a spare of flats or jacket or anything else that can be possible! It has three pools, a tennis court, a foosball table, kitchens across three buildings and lots of parking!
             </p>
             <p>
                 The venue is about a 15 minute drive from <b>South Tenerife Airport (TFS)</b> and 30-minute drive from Adeje.
             </p>
+            <h5><b>Dress Code</b></h5>
+            <p>
+                The theme of the wedding is "garden of sparkle" (think Hawaiian Chic) so any floral patterns or aloha-style dresses / shirts will be great! 
+            </p>
             <h5><b>Wedding transport</b></h5>
             <p>
-                Will be arranged to and from a central location(s) to the venue. In the evening, we'll arrange a couple of departure times for guests. If you rent a car, there is plenty of parking onsite (we are literally in a mountainous desert), or you can also take a taxi back.
+                If you rent a car, there is plenty of parking onsite (we are literally in a mountainous desert), or you can also take a taxi to/from the venue.
             </p>
             <h5><b>Our wedding planners</b></h5>
             <p>
@@ -331,7 +337,7 @@
             </p>
             <h6>Option 2: Stay in Costa Adeje</h6>
             <p>
-                If you do not get a spot on-site, please book accomodation yourself and we will arrange for a shuttle bus to pick up / drop off guests from a central location in Costa Adeje (about a 30 minute drive). Alternatively you can get a taxi or drive to the venue yourself.
+                If you do not get a spot on-site, please book accomodation yourself and arrange for a taxi or drive to the venue yourself. It's approximately a 30 minutes drive from Costa Adeje. 
             </p>
             <h5>Sunday 16th - Sunday 23rd October (Extended holiday)</h5>
             <p>
