adding more bank stuff

--- a/index.html
+++ b/index.html
@@ -411,12 +411,20 @@
         <div class="wp3">
             <h3 class="header">Gift</h3>
             <p>
-                Your presence is truly our present and we are so glad to have you in our lives! Should you really wish to gift something, then we plan to take 3 months off in the first quarter of 2023 to pursue our travel dreams before we start our next chapter! We are planning to adventure across Australia, New Zealand, Indonesia, Malaysia, Singapore, Hong Kong (to see the family!) and Japan (also to see long-awaited family!). Thank you so much! x
+                Your presence is truly our present and we are so glad to have you in our lives! Should you really wish to gift something, then we plan to take 3 months off in the first quarter of 2023 to pursue our travel dreams before we start our next chapter! We are planning to adventure across Australia, New Zealand, Indonesia, Malaysia, Singapore, Hong Kong (to see the family!) and Japan (also to see long-awaited family!).
+            </p>
+            <p>
+                For US-based folks, feel free to reach out to David for American bank deets! Thank you so much! x
+            </p>
             <div class="text-center">
                 <ul>
                     <li>David Szajngarten and Crystal Chiu</li>
                     <li>Sort Code: <b>04-00-04</b></li>
                     <li>Account Number: <b>53917489</b></li>
+                    <li>SWIFT/BIC code: <b>MONZGB2LXXX</b></li>
+                    <li>IBAN: <b>GB60MONZ04000453917489</b></li>
+                    <li>MONZO BANK LIMITED</li>
+                    <li>BROADWALK HOUSE, 5 APPOLD STREET, LONDON, EC2A 2AG United Kingdom</li>
                 </ul>
             </div>
         </div>
